add the BB84 animation

--- a/bb84Animation.html
+++ b/bb84Animation.html
@@ -33,6 +33,12 @@
 		</div>
 		
 		<div id="bob">
+			<div class="horizontal" id="BBases">
+						
+			</div>
+			<div class="horizontal" id="BDecode">
+						
+			</div>
 			<p>Bob</p>
 			<img src="img/bob.svg" width="200" height="200">
 		</div>
