ajout du k en svg

--- a/bb84Animation.html
+++ b/bb84Animation.html
@@ -21,7 +21,9 @@
 			<div class="horizontal">
 				<img src="img/alice.svg" width="200" height="200">
 				<div class="vertical">
-					<label>k : </label><input type='text' id="nbr" />
+					<div class="horizontal" id="k">
+					
+					</div>
 					<div class="horizontal" id="ABases">
 						
 					</div>
