--- a/fente.html
+++ b/fente.html
@@ -26,6 +26,18 @@ deux fentes ? </p>
 <img src="img/100photons.png" width="600" height="200" alt="Résultat après 100 tirs"/>
 <img src="img/500photons.png" width="600" height="200" alt="Résultat après 500 tirs"/>
 <img src="img/10000photons.png" width="600" height="200" alt="Résultat après 10000 tirs"/>
-<p>On peux voir au final une figure d'interférence ce qui correspond au comportement d'une onde. Et lorsque l'on essaie de comprendre par quel fente est passé le photon alors on obtiens la même figure que l'on obtiens lors du cas du tir au fusils</p>
+<p>On peux voir au final une figure d'interférence ce qui correspond au comportement d'une onde. Et lorsque l'on essaie de comprendre par quel fente est passé le photon,
+    via un système de détection, alors on obtiens la même figure lors du cas du tir au fusils
+</p>
+<p>Sur la page de l'<a href="fenteAnimation.html">animation</a> des fentes il y a deux champs à paramétrer :</p>
+<img src="img/parametreFentes.png" width="600" height="75" alt="Paramètre de l'animation"/>
+<p>Le nombre de point que l'on veut faire apparaitre sur la figure et le délais entre chaque animation et chaque apparition (si laissé vide alors pas d'animation et tout les points appraitrons en même temps</p>
+<p>Au niveaux des boutons :
+    <ul>
+        <li>Création: permet de démarrer l'animation</li>
+        <li>Stop: permet de stoper l'animation</li>
+        <li>Clear: permet de nettoyer la figure</li>
+</ul>
+</p>
 </body>
 </html>
