--- a/bb84.html
+++ b/bb84.html
@@ -13,6 +13,29 @@
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
+
+	<nav id="navbar" class="">
+		<div class="nav-wrapper">
+		  <!-- Navbar Logo -->
+		  <div class="logo">
+			<img src="img/Logo_UTC_2018.svg" class="img"/>
+		  </div>
+	  
+		  <!-- Navbar Links -->
+		  <ul id="menu">
+			<li><a href="index.html">Accueil</a></li>
+			<li><a href="fenteAnimation.html">Fentes de Young</a></li>
+			<li><a href="fente.html">Explication</a></li>
+			<li><a href="bb84Animation.html">BB84 Animation</a></li>
+			<li><a href="bb84.html">Explication</a></li>
+		  </ul>
+		</div>
+	  </nav>
+	  
+	  <div class="menuIcon">
+		<span class="icon icon-bars"></span>
+		<span class="icon icon-bars overlay"></span>
+	  </div>
 	<h1>PRotocole BB84</h1>
 	<div>
 		<h2>Introduction</h2>
