--- a/index.html
+++ b/index.html
@@ -1,102 +1,308 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Index</title>
+<link href="" rel="stylesheet">
+<link href="css/home.css" rel="stylesheet">
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<nav id="navbar" class="">
+  <div class="nav-wrapper">
+    <!-- Navbar Logo -->
+    <div class="logo">
+      <img src="img/Logo_UTC_2018.svg" class="img"/>
+    </div>
 
-    <link href="css/index.css" rel="stylesheet" type="text/css" media="all">
+    <!-- Navbar Links -->
+    <ul id="menu">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="fenteAnimation.html">Fentes de Young</a></li>
+      <li><a href="fente.html">Explication</a></li>
+      <li><a href="bb84Animation.html">BB84 Animation</a></li>
+      <li><a href="bb84.html">Explication</a></li>
+    </ul>
+  </div>
+</nav>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/anime.min.js"></script>
-    <script src="js/outils.js"></script>
-	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-</head>
-<body>
-	<h1>TX n.6684: Démonstrateur des concepts de base de l'informatique quantique</h1>
-	<h2>Responsable: Walter Schön</h2>
-	<h2>étudiant: Kyllian Chartrain</h2>
-	<p>Ce site est le produit d'un projet géré par Mr. Walter Schön et réalisé par Kyllian Chartrain. Un autre site sera créée pour une introduction plus poussé des concepts Quantique de base.
-		Il ne sera ici traité que le l'expérience des fentes de Young,
-		qui m'a permis de maitriser les technologies pour de l'animation js (canvas et animation.js)
-		et du protocole BB84 (dans lequel je n'ai gardé que animation.js). Je me suis permis de reprendre le travail de la Tx Crypto Quantique pour la partie historique.
-	</p>
-	<div>
-		<h3>Figures historique</h3>
-		<div>
-			<h4>La catastrophe Ultraviolette [1800-1900]</h4>
-			<p>---</p>
+<div class="menuIcon">
+  <span class="icon icon-bars"></span>
+  <span class="icon icon-bars overlay"></span>
+</div>
+
+
+<script>
+//Canvas
+var canvas = {
+  el: {},
+  ctx: {},
+  build: function() {
+    canvas.el = document.createElement('canvas');
+    canvas.ctx = canvas.el.getContext('2d');
+    canvas.el.width = window.innerWidth;
+    canvas.el.height = window.innerHeight;
+    document.body.appendChild(canvas.el);
+  }
+};
+
+//Utils
+ var utils = {
+   random: function(min,max) {
+     if(max == null) {
+       max = min;
+       min = 0;
+     }
+     var number = Math.random()*(max-min)+min;
+     
+     return number.toFixed(6);
+   },
+   normalize: function(vector) {
+     var length = Math.sqrt(  Math.pow(vector.x, 6) + Math.pow(vector.y,6));   
+     vector.x = vector.x/length;
+     vector.y = vector.y/length;
+     
+     return vector;
+   }
+ };
+
+//Particules
+function Particule(x,y,velX,velY,weight,dragForce) {
+	this.x = x;
+	this.y = y;
+	this.velX = velX;
+	this.velY = velY;
+	this.weight = weight || 1;
+	this.dragForce = dragForce || 0.98;
+};
+
+Particule.prototype.draw = function draw() {
+	canvas.ctx.beginPath();
+	canvas.ctx.fillStyle = 'white';
+ 
+	canvas.ctx.arc(this.x,this.y,this.weight,0,Math.PI*2);
+	canvas.ctx.fill();
+  canvas.ctx.shadowBlur=20;
+  canvas.ctx.shadowColor="black";
+	canvas.ctx.closePath();
+};
+
+Particule.prototype.update = function update(mouseVector){
+
+   var force = {
+    x: mouseVector.x- this.x ,
+    y:  mouseVector.y -this.y
+  };
+  var test = {x:force.x*force.x,y:force.y*force.y}
+  var Nforce = utils.normalize(force);
+  this.velX *= this.dragForce;
+  this.velY *= this.dragForce;
+
+  this.velX +=   Nforce.x *0.5; 
+  this.velY +=   Nforce.y*0.5;
+
+  this.x += this.velX;
+  this.y += this.velY; 
+};
+
+//Application
+var App = {
+  particules: {},
+  mouseVector: {},
+  init: function() {
+    App.particules = [];
+    App.mouseVector = {x:window.innerWidth/2,y:window.innerHeight/2};
+    console.log('%c --- Hello world --- ','background:black;color:white;font-family:helvetica;font-size:21px');
+    console.log('%c -- App initialized -- ','background:black;color:white;font-family:helvetica;font-size:16px');
+    App.build();
+  },
+  build:function() {
+    canvas.build();
+    for (var i = 0;i<100;i++) {
+      particule = new Particule(
+        Math.random()*canvas.el.width,
+        Math.random()*canvas.el.height,
+        utils.random(-4,4),
+        utils.random(-4,4),
+        Math.random()*5,
+        utils.random(0.99,1)
+      );
+      App.particules.push(particule);
+    }
+    App.animate();
+    console.log('%c -- App builded -- ','background:black;color:white;font-family:helvetica;font-size:16px');
+     console.log('%c --- Particule System by Jordan Machado --- ','background:black;color:white;font-family:helvetica;font-size:12px');
+  },
+  animate: function() {
+    canvas.ctx.fillStyle = 'rgba(0,0,0,0.4)';
+    canvas.ctx.fillRect(0, 0, canvas.el.width, canvas.el.height);
+    for (var i=0,ln=App.particules.length;i<ln;i++){
+      App.particules[i].update(App.mouseVector);
+      App.particules[i].draw();
+    }
+    requestAnimationFrame(App.animate);
+  }
+}
+
+//Listeners
+window.addEventListener("mousemove",onMouseMove,false);
+window.addEventListener("resize",onResize,false);
+
+function onMouseMove(e)  {
+  App.mouseVector.x = e.clientX;
+  App.mouseVector.y = e.clientY;
+}
+function onResize(e)  {
+   canvas.el.width = window.innerWidth;
+   canvas.el.height = window.innerHeight;
+}
+
+//START
+App.init();
+</script>
+
+<div class="intro">
+  <h1>TX n.6684: Démonstrateur des Concepts de Base de l'Informatique Quantique</h1>
+  <h2>Responsable : Walter Schön & Etudiant: Kyllian Chartrain</h2>
+  <h4>Ce site est le produit d'un projet géré par Mr. Walter Schön et réalisé par Kyllian Chartrain. 
+    Un autre site sera créée pour une introduction plus poussé des concepts quantique de base. 
+    Il ne sera ici traité de l'expérience des fentes de Young, qui m'a permis de maitriser les
+    technologies pour de l'animation js (canvas et animation.js) et du protocole BB84 (dans lequel
+    je n'ai gardé que animation.js). Je me suis permis de reprendre le travail de la Tx Crypto 
+    Quantique pour la partie historique.</h4>
+</div>
+
+
+
+<div class="scroll-downs">
+  
+    <div class="mousey">
+      <div class="scroller"></div>
+    </div>
+  </div>
+  <h3 class="title">Figures historiques</h3>
+  <h3 class="title2">Applications</h3>
+
+
+  <div>
+    <hr class="separation" />
+  </div>
+
+  <div>
+    <hr class="separation2" />
+  </div>
+
+
+  
+  <div class="wrapper">
+		<div class="block">
+			<div class="year">La catastrophe Ultraviolette [1800-1900]</div>
+			<div class="joke">
+				<p></p>
+			</div>
 		</div>
-		<div>
-			<h4>Introduction du Quantum d'energie [1900]</h4>
-			<p>Max Planck</p>
-			<p>Physicien allemand né en 1858 et mort en 1947. C'est en voulant interpréter la courbe du rayonnement du corps noir qu'il fait l'hypothèse d'échanges d'énergie par quantum entre les parois d'une cavité et le rayonnement en équilibre à l'intérieur. Il introduit alors la célèbre constante de Planck : h qui lui vaudra un an plus tard en 1901 un prix nobel.</p>
+		<div class="block">
+			<div class="year">Introduction du Quantum d'energie [1900]</div>
+			<div class="joke">
+				<p>Max Planck est un physicien allemand né en 1858 et mort en 1947. 
+           C'est en voulant interpréter la courbe du rayonnement du corps 
+           noir qu'il fait l'hypothèse d'échanges d'énergie par quantum entre
+           les parois d'une cavité et le rayonnement en équilibre à l'intérieur.
+           Il introduit alors la célèbre constante de Planck : h qui lui vaudra
+          un an plus tard en 1901 un prix nobel.</p>
+			</div>
 		</div>
-		<div>
-			<h4>les photons [1905]</h4>
-			<p>Albert Einstein</p>
-			<p>Afin d'expliquer l'effet photoélectrique, c'est à dire que la lumière arrivant sur certains matériaux peut éjecter des électrons de celui-ci, il postule, à partir de l'hypothèse quantique de Planck, que la lumière elle-même est constituée de particules individuelles quantiques (photons). Cela vient s'ajouter à la théorie de Young, datant de 1801, selon laquelle la lumière est une onde</p>
+		<div class="block">
+			<div class="year">les photons [1905]</div>
+			<div class="joke">
+				<p>Albert Einstein. Afin d'expliquer l'effet photoélectrique, 
+          c'est à dire que la lumière arrivant sur certains matériaux 
+          peut éjecter des électrons de celui-ci, il postule, à partir
+          de l'hypothèse quantique de Planck, que la lumière elle-même 
+          est constituée de particules individuelles quantiques (photons). 
+          Cela vient s'ajouter à la théorie de Young, datant de 1801, 
+          selon laquelle la lumière est une onde</p>
+			</div>
 		</div>
-		<div>
-			<h4>Niels Bohr [1913]</h4>
-			<p>Introduit le modèle de Bhor</p>
+		<div class="block">
+			<div class="year">Niels Bohr [1913]</div>
+			<div class="joke">
+				<p>Introduit le modèle de Bhor</p>
+			</div>
 		</div>
-		<div>
-			<h4>Louis de Broglie et la mécanique ondulatoire</h4>
-			<p>
-				Postule que les électrons en mouvement sont associés avec des ondes,dont les longueurs d'onde sont données par la constante de Planck \(h\) divisée par la quantité de mouvement
-			</p>
-			<p>
-			  \(mv = 0\)
-			</p>
-			<p>
-				de l'électron :
-			</p>
-			<p>
-				\(λ = {h \over mv} = {h \over p}\) 
-			</p>
-			<p>
-				Il étend donc la dualité onde-cosrpuscule aux particules.
-			</p>
+		<div class="block">
+			<div class="year">Louis de Broglie et la mécanique ondulatoire [1920]</div>
+			<div class="joke">
+				<p>Postule que les électrons en mouvement sont associés avec des ondes, 
+           dont les longueurs d'onde sont données par la constante de Planck 
+           \(h\) divisée par la quantité de mouvement</p>
+           <p>
+            de l'électron :  \(λ = {h \over mv} = {h \over p}\) 
+            Il étend donc la dualité onde-cosrpuscule aux particules.
+          </p>
+			</div>
 		</div>
-		<div>
-			<h3>Introduction du principe d'intrication [1935]</h3>
-			<p>Erwin Schrodinger</p>
-			<p>L'intrication est un principe quantique fondamental. Un objet physique, formé de 2 parties qui ont eu une histoire commune, peut être placé dans un état ou les 2 parties sont intimmement et irrémédiablement liées. On constate alors des corrélations une fois les deux parties séparées : une mesure effectuée sur l'une des deux parties donne instantanément le résultat de la mesure de l'autre, et ce peu importe la distance qui les sépare.</p>
+		<div class="block">
+			<div class="year">Introduction du principe d'intrication [1935]</div>
+			<div class="joke">
+				<p>Erwin Schrodinger - L'intrication est un principe quantique fondamental. 
+          Un objet physique, formé de 2 parties qui ont eu une histoire commune, 
+          peut être placé dans un état ou les 2 parties sont intimmement et irrémédiablement 
+          liées. On constate alors des corrélations une fois les deux parties séparées : une 
+          mesure effectuée sur l'une des deux parties donne instantanément le résultat de la 
+          mesure de l'autre, et ce peu importe la distance qui les sépare..</p>
+			</div>
 		</div>
-		<div>
-			<h3>Einstein, Podolsky, Rosen [1935]</h3>
-			<p>formulation du paradoxe <a href="https://www.futura-sciences.com/sciences/definitions/physique-paradoxe-epr-4662/">paradoxe EPR</a></p>
+		<div class="block">
+			<div class="year">Einstein, Podolsky, Rosen [1935]</div>
+			<div class="joke">
+				<p>Formulation du paradoxe. <a href="https://www.futura-sciences.com/sciences/definitions/physique-paradoxe-epr-4662/">paradoxe EPR</a></p>
+			</div>
 		</div>
-		<div>
-			<h3>John Bell [1964]</h3>
-			<p>John Bell</p>
-			<p>Démontre, à Genève, que les idées d’Einstein sur l’aspect inachevé de la théorie quantique entrent en contradiction avec les prédictions mêmes de cette théorie.John Bell propose une <a href="https://www.pourlascience.fr/sd/physique/lintrication-quantique-confirmee-par-une-experience-de-bell-sans-faille-12185.php">méthode expérimentale</a> pour répondre au paradoxe EPR. Cette expérience ne pourra être réalisée de manière concluante qu’en 1982, par Alain Aspect et ses collaborateurs à Paris. Elle démontre irréfutablement la justesse de la théorie quantique.</p>
+		<div class="block">
+			<div class="year">John Bell [1964]</div>
+			<div class="joke">
+				<p>John Bell démontre, à Genève, que les idées d’Einstein sur l’aspect inachevé de la théorie quantique entrent
+           en contradiction avec les prédictions mêmes de cette théorie.John Bell propose une 
+           <a href="https://www.pourlascience.fr/sd/physique/lintrication-quantique-confirmee-par-une-experience-de-bell-sans-faille-12185.php"> méthode expérimentale</a> 
+           pour répondre au paradoxe EPR. Cette expérience ne pourra être réalisée de manière
+           concluante qu’en 1982, par Alain Aspect et ses collaborateurs à Paris. Elle démontre 
+           irréfutablement la justesse de la théorie quantique.
+        </p>
+			</div>
 		</div>
-	</div>
-	<div>
-		<h3>Applications</h3>
-		<div>
-			<p>Richard Feynman [1981]</p>
-			<p>physicien quantique, évoque l’idée d’un ordinateur quantique</p>
+  </div>
+  
+
+
+
+  <div class="wrapper2">
+		<div class="block">
+			<div class="year">Richard Feynman [1981]</div>
+			<div class="joke">
+				<p>physicien quantique, évoque l’idée d’un ordinateur quantique</p>
+			</div>
 		</div>
-		<div>
-			<p>Charles Bennet et gilles Brasard [1984]</p>
-			<p>Le premier protocole de cryptographie quantique est formalisé, il sera à la base de nombreux autres protocoles (E90, E91, E92, SSP99, SARG04...)</p>
+		<div class="block">
+			<div class="year">Charles Bennet et gilles Brasard [1984]</div>
+			<div class="joke">
+				<p>Le premier protocole de cryptographie quantique est formalisé, 
+          il sera à la base de nombreux autres protocoles (E90, E91, E92, SSP99, SARG04...)</p>
+			</div>
 		</div>
-		<div>
-			<p>David Deutsch [1985]</p>
-			<p>Théorise l'informatique quantique, avec l'ordinateur quantique universel</p>
+		<div class="block">
+			<div class="year">David Deutsch [1985]</div>
+			<div class="joke">
+				<p>Théorise l'informatique quantique, avec l'ordinateur quantique universel</p>
+			</div>
 		</div>
-		<div>
-			<p>Peter Shor [1994]</p>
-			<p>L'algorithme de Shor : algorithme de factorisation en facteurs premiers, en temps polynomial</p>
+		<div class="block">
+			<div class="year">Peter Shor [1994]</div>
+			<div class="joke">
+				<p>L'algorithme de Shor : algorithme de factorisation en facteurs premiers, en temps polynomial</p>
+			</div>
 		</div>
-		<div>
-			<p>Lev Grover [1996]</p>
-			<p>L'algorithme de shor : algorithme de recherche en complexité</p>
-			<p>\(O(\sqrt{\overline{N}})\)</p>
+		<div class="block">
+			<div class="year">Lev Grover [1996]</div>
+			<div class="joke">
+				<p>L'algorithme de shor : algorithme de recherche en complexité \(O(\sqrt{\overline{N}})\)</p>
+			</div>
 		</div>
-	</div>
-</body>
-</html>
+	
+		
+  </div>
+ 
