--- a/bb84.html
+++ b/bb84.html
@@ -36,7 +36,7 @@
 		<span class="icon icon-bars"></span>
 		<span class="icon icon-bars overlay"></span>
 	  </div>
-	<h1>PRotocole BB84</h1>
+	<h1>Protocole BB84</h1>
 	<div>
 		<h2>Introduction</h2>
 		<p>C'est le coeur de se projet, j'ai créée l'animation <a href="bb84Animation.html">ici</a> pour faciliter la compréhension de celui-ci</p>
@@ -44,7 +44,7 @@
 			L'interêt principale de se protocole est qu'il permet de partager un secret au moyen d'un canal de communication dit quantique. 
 			Le protocole prévois l'utilisation de photons polarisé via des filtres.
 		</p>
-		<img src="img/polarized-filter.svg"/>
+		<img class="pola" src="img/polarized-filter.svg"/>
 		<p>Le schéma montre un paquet de photons qui on toute les orientations possible que l'on filtre pour n'avoir au final que des photons polarisé selon une orientation défini</p>
 		<p>Grâce à ce principe on peut encoder une base binaire qui va servir de base à la création d'une clé de chiffrement.
 			Pour l'animation et l'explication je prendrais les encodages suivants : 
@@ -61,18 +61,18 @@
 		<h2>Cas sans Espion</h2>
 		<h3>Etape 1</h3>
 		<p>Alice va générer une suite aléatoire de bit ainsi qu'une base pour encoder les bits généré suivant la liste donné plus haut</p>
-		<img src="img/AliceGenerationEncode.jpg"/>
+		<img class="pola" src="img/AliceGenerationEncode.jpg"/>
 		<h3>Etape 2</h3>
 		<p>Alice envoie via le canal de communication quantique les photons polarisé à Bob. Pour chaque photon reçu il va choisir une base de façon aléatoire pour les décoder<p>
-		<img src="img/AliceCommunication.jpg"/>
+		<img class="pola" src="img/AliceCommunication.jpg"/>
 		<h3>Etape 3</h3>
 		<p>Une fois que Bob à terminé de décoder les photons reçu il a 50% de chance d'avoir mal lu chaques photons, puisque les bases pour les décoder
 		   on été choisi aléatoirement. Il va donc communiquer les bases qu'il a utilisé pour décoder les photon à Alice sur un canal publique (pas montré dans l'animation)
 		   et Alice envoie les bases qu'elle à utilisé pour l'encodage. Une fois reçu Alice et Bob connaissent donc les bases de chacun et donc peuvent forger la clé en fonction des bonne bases
 		</p>
-		<img src="img/BobDecode.jpg"/>
+		<img class="pola" src="img/BobDecode.jpg"/>
 		<p>Sur cette image les bon photons récupéré par Bob sont affiché en Vert et les mauvais en Cyan si on ne garde que les bon photons et que l'on les traduits en bits on obtients : </p>
-		<img src="img/BitFinalNoError.jpg"/>
+		<img class="pola" src="img/BitFinalNoError.jpg"/>
 		<p>Alice et Bob on maintenant une suite de bits connue seulement d'eux seul et peuvent créer un clé à partir de cette suite</p>
 	<div>
 	<div>
@@ -83,18 +83,18 @@
 		<p>Eve intercepte les Photons envoyé par Alice et les décodes, le problème étant qu'en faisant cela Eve détruit l'information sur les photons et dois donc les renvoyer à Bob.</p>
 		<p>Si Eve ne renvoie pas les photons alors Bob saura qu'il y a écoute sur le canal quantique, mais la force de BB84 et de son association avec un canal quantique c'est que même en renvoyant les photons à Bob il y une forte probabilité de découvrir que le canal est sur écoute</p>
 		<p>Reprenons, Eve intercepte les photons et agis comme Bob en créant une base de décodage de façon aléatoire</p>
-		<img src="img/EveDecoding.jpg">
+		<img class="pola" src="img/EveDecoding.jpg">
 		<p>Comme Bob elle a 50% de trouver une bonne base de décodage mais à ce stade elle ne sait pas si elle a choisi une bonne base ou non puisque Alice n'a pas encore révélé ses bases d'encodage</p>
 		<h3>Etape 3</h3>
 		<p>Bob récupère les photons envoyé par Eve croyant qu'ils viennent d'Alice et les décodent un a un</p>
-		<img src="img/BobGetFromEve.jpg"/>
-		<img src="img/BobDecodingFromEve.jpg"/>
+		<img class="pola" src="img/BobGetFromEve.jpg"/>
+		<img class="pola2" src="img/BobDecodingFromEve.jpg"/>
 		<p>Au niveaux de la représentation j'ai mis en rouge les Erreurs introduites par Eve lors de son envoie mais Bob et Alice ne savent toujours pas s'ils ont été écouté ou non</p>
 		<h3>Etape 4</h3>
 		<p>C'est l'étape dit de la réconciliation, Alice et Bob s'envoie leurs base et déduisent la clé suivant les bases communes, à ce stade la, Bob et Alice ne savent toujours pas s'il ont été écouté ou non</p>
-		<img src="img/BitFinalWithError.jpg"/>
+		<img class="pola" src="img/BitFinalWithError.jpg"/>
 		<p>Comme on peux le voir il y a un bit rouge dans le résultat en effet Eve à introduit une erreur que je vais expliquer maintenant en prenant la colonne qui pose problème (la 9ième): </p>
-		<img src="img/EveError.jpg"/>
+		<img class="pola" src="img/EveError.jpg"/>
 		<p> Alice tout en haut a encodé le bit 0 avec la base : <img src="img/RectArrowsCross.svg" class="base"/> et obtiens donc : <img src="img/HorizontalArrow.svg" class="encodage"/>.</br>
 			Eve choisi la mauvaise base pour décoder le photon: <img src="img/DiagArrowsCross.svg" class="base"/> et donc reçois un résultat aléatoire lors du décodage, ici : <img src="img/LeftDiagArrow.svg" class="encodage"/>.</br>
 			Bob lui a choisi la Bonne base par rapport à celle d'Alice : <img src="img/RectArrowsCross.svg" class="base"/> mais comme Eve n'a pas choisi la bonne base elle a introduit ici une erreur, Bob récupère donc un résultat aléatoire alors qu'il avait choisi la bonne base.</br>
@@ -105,7 +105,7 @@
 			Voila l'explication sur l'introduction d'erreurs par Eve, cette explication est celle d'un point de vue extérieur, Alice et Bob ne savent toujours pas s'ils ont été écouté ils vont devoir alors comparer leurs résultats décodé, on dit qu'ils vont "sacrifier des bits", en effet s'ils montrent une partie de ce qui vas servir de clé dans le canal publique il ne faut pas que ces bits fassent partie de la clé.
 			Dans cet Exemple si Alice et Bob sacrifient et comparent la moitié des bits de la clé il vont avoir 101 pour Alice et 111 pour Bob, il y a erreur ils savent qu'ils on été écouté sur le canal quantique et donc que le reste de bit (000) n'est pas utilisable.
 		</p>
-		<p>Plus la taille de bit augmente plus les chance de découvir Eve augmente, voici quelques exemples avec 64 bits<p>
+		<p>Plus le nombre de bits augmente plus les chance de découvir Eve augmente, voici quelques exemples avec 64 bits<p>
 		<img src="img/ResWithEve1.jpg"/>
 		<img src="img/ResWithEve2.jpg"/>
 		<img src="img/ResWithEve3.jpg"/>
@@ -113,7 +113,7 @@
 	</div>
 	<div>
 		<h2>Explication de l'animation</h2>
-		<img src="img/optionBB84.jpg"/>
+		<img class="pola" src="img/optionBB84.jpg"/>
 		<p> On choisi le nombre de bit que l'on veut créer et qui vont être encodé et envoyé en photons.</br>
 			On choisi si oui ou non il y a la présence d'Eve sur le canal quantique.</br>
 			On choisi si on veut un délais dans l'animation, ce qui permet de voir les échanges entre Alice, Eve et Bob(intéréssant avec un petit nombre de bits) sinon alors le résultat et les échanges sont fait instantanément(intéréssant des que l'on veux voir des résultats sur un grand nombre de bits).</br>
